# Real-time_item_monitoring_system

./: .condarc  .gitignore  ANTI_FALSE_POSITIVE_ADJUSTMENTS.md  BATCH_COUNTING_SYSTEM.md  CLAUDE.md  COLOR_CONTRAST_OPTIMIZATION_SUMMARY.md  COMPOSITE_DEBUG_GUIDE.md  CROSS_PLATFORM_UI_SOLUTION.md  DETECTION_OPTIMIZATION_GUIDE.md  GPU_OPTIMIZATION_SOLUTION.md  Info.plist  LINUX_INSTALL.md  LINUX_QUICKSTART.txt  LINUX_TROUBLESHOOTING.md  LOCAL_BUILD_TEST.md  MIGRATION.md  OPTIMIZATION_SUMMARY.md  PACKAGING.md  PERFORMANCE_OPTIMIZATION.md  PYQT6_PROFESSIONAL.md  QUICKSTART_PACKAGING.md  QUICK_START.md  README.md  README_ARCHITECTURE_IMPROVEMENTS.md  README_ARM.txt  README_PYQT6.md  README_SETTINGS_MANAGER.md  README_SETTINGS_SYNC_FIX.md  RELEASE.md  SYSTEM_GUIDE.md  THREAD_SYNC_FIX_SUMMARY.md  TTK_STYLE_FIX_SUMMARY.md  UI_DESIGN_IMPROVEMENTS.md  UPDATE_GUIDE.md  VIDEO_RECORDING_SYSTEM.md  activate_env.bat  advanced_performance_analysis.py  basler_mvc_launcher.py  basler_pyqt6.spec  build_package.py  (+37 more)
.claude/: settings.local.json
.github/: LINUX_PACKAGING_SUMMARY.md
.github/workflows/: build-cpp-release.yml  build-release.yml
basler_cpp/: .gitignore  CMakeLists.txt  README.md  UI_UX_TODO.md
basler_cpp/assets/: README.md
basler_cpp/config/: default_settings.json
basler_cpp/include/config/: settings.h
basler_cpp/include/core/: camera_controller.h  detection_controller.h  source_manager.h  vibrator_controller.h  video_player.h  video_recorder.h  yolo_detector.h
basler_cpp/include/ui/: main_window.h  setup_wizard.h  style.h  theme.h
basler_cpp/include/ui/widgets/: camera_control.h  debug_panel.h  method_selector.h  packaging_control.h  part_selector.h  recording_control.h  system_monitor.h  video_display.h
basler_cpp/include/ui/widgets/method_panels/: counting_method_panel.h  defect_detection_method_panel.h
basler_cpp/installer/: install.iss
basler_cpp/pylon_test/: CMakeLists.txt  main.cpp
basler_cpp/resources/macos/: Info.plist
basler_cpp/scripts/: benchmark.sh  package_macos.sh
basler_cpp/src/: main.cpp
basler_cpp/src/config/: settings.cpp
basler_cpp/src/core/: camera_controller.cpp  detection_controller.cpp  source_manager.cpp  vibrator_controller.cpp  video_player.cpp  video_recorder.cpp  yolo_detector.cpp
basler_cpp/src/ui/: main_window.cpp  setup_wizard.cpp
basler_cpp/src/ui/widgets/: camera_control.cpp  debug_panel.cpp  method_selector.cpp  packaging_control.cpp  part_selector.cpp  recording_control.cpp  system_monitor.cpp  video_display.cpp
basler_cpp/src/ui/widgets/method_panels/: counting_method_panel.cpp  defect_detection_method_panel.cpp
basler_cpp/tools/: export_onnx.py  extract_frames.py  requirements.txt  train_yolo.py
basler_mvc/: CUSTOMTKINTER_UPGRADE.md  INTERFACE_COMPARISON.md  README.md  TODAY_OPTIMIZATION_REPORT.md  UI_OPTIMIZATION_GUIDE.md  __init__.py  main.py  main_selector.py
basler_mvc/batch_records/: batch_record_20250811_085557.json
basler_mvc/config/: __init__.py  settings.py
basler_mvc/controllers/: __init__.py  main_controller.py
basler_mvc/examples/: ultra_high_speed_detection_example.py
basler_mvc/models/: __init__.py  basler_camera_model.py  detection_base.py  detection_model.py  detection_processor.py  enhanced_detection_method.py  video_player_model.py  video_recorder_model.py
basler_mvc/recordings/: camera_rec_20250805_103649.avi
basler_mvc/styles/: CROSS_PLATFORM_USAGE_GUIDE.md  README_CROSS_PLATFORM.md  __init__.py  apple_theme.py  cross_platform_color_manager.py  cross_platform_example.py  cross_platform_font_manager.py  cross_platform_ui_manager.py  liquid_glass_manager.py  liquid_glass_theme.py  theme_manager.py
basler_mvc/utils/: __init__.py  config_manager.py  gpu_accelerator.py  memory_monitor.py  performance_monitor.py  recording_validator.py  system_diagnostics.py
basler_mvc/views/: __init__.py  main_view.py  main_view_ctk.py  main_view_ctk_bright.py  main_view_ctk_complete.py  main_view_ctk_optimized.py
basler_pyqt6/: __init__.py  main.py  main_v2.py  requirements.txt  updater.py  version.py
basler_pyqt6/config/: README.md  __init__.py  detection_params.json  settings.py  test_config.py  統一配置整合報告.md
basler_pyqt6/core/: __init__.py  camera.py  detection.py  detection_methods.py  kalman_tracker.py  smart_updater.py  source_manager.py  updater.py  vibrator_controller.py  video_player.py  video_recorder.py
basler_pyqt6/resources/: __init__.py  icons.py
basler_pyqt6/resources/parts/: .gitkeep  README.md  placeholder.txt
basler_pyqt6/ui/: __init__.py  main_window.py  main_window_v2.py
basler_pyqt6/ui/dialogs/: __init__.py  update_dialog.py
basler_pyqt6/ui/widgets/: __init__.py  camera_control.py  debug_panel.py  detection_control.py  method_selector.py  packaging_control.py  part_selector.py  recording_control.py  recording_upload_widget.py  system_monitor.py  video_display.py
config/: config.yaml  config.yaml.bak  settings.json  settings.json.bak
controllers/: detection_controller.py  system_controller.py
installer/: windows_installer.iss
languages/: en_US.json  zh_CN.json  zh_TW.json
models/: api_client.py  camera_manager.py  detection_controller.py  image_processor.py  system_config.py
models/detection_methods/: __init__.py  base_detection.py
models/detection_methods/deep_learning/: __init__.py  yolo_detection.py
models/detection_methods/shape_detection/: __init__.py  circle_detection.py
models/detection_methods/specialized/: __init__.py
models/detection_methods/traditional/: __init__.py  background_subtraction.py  threshold_based.py
resources/: README.md
scripts/: build.py  release.py
update_server/: README.md  app.py  releases_metadata.json  run_server.sh
utils/: config.py  exceptions.py  language.py  language_manager.py  logger.py  settings_manager.py  theme_manager.py  ui_style_manager.py  ui_theme.py
views/: main_window.py  ui_manager.py
views/components/: analysis_panel.py  control_panel.py  photo_panel.py  settings_panel.py  video_panel.py
views/components/setting/: settings_dialog.py
(+3 files in other folders)
